# solana_phoenix_tx_api

./: .env  Cargo.toml  Dockerfile  ch_ui_export_2024-12-19T12-49-26.csv  docker-compose.yml  readme.md
.clickhouse_local_data/: uuid
.clickhouse_local_data/data/system/: asynchronous_metric_log  error_log  metric_log  text_log  trace_log
.clickhouse_local_data/metadata/: default.sql  system  system.sql
.clickhouse_local_data/preprocessed_configs/: config.xml
.clickhouse_local_data/store/396/3969589f-813d-4ae9-8889-ce061226e12e/202412_1_21_4/: checksums.txt  data.cmrk3  primary.cidx  serialization.json
.clickhouse_local_data/store/396/3969589f-813d-4ae9-8889-ce061226e12e/202412_1_26_5/: checksums.txt  data.cmrk3  primary.cidx  serialization.json
.clickhouse_local_data/store/396/3969589f-813d-4ae9-8889-ce061226e12e/202412_1_31_6/: checksums.txt  data.cmrk3  primary.cidx  serialization.json
.clickhouse_local_data/store/396/3969589f-813d-4ae9-8889-ce061226e12e/202412_1_36_7/: checksums.txt  data.cmrk3  primary.cidx  serialization.json
.clickhouse_local_data/store/396/3969589f-813d-4ae9-8889-ce061226e12e/202412_1_41_8/: checksums.txt  data.cmrk3  primary.cidx  serialization.json
.clickhouse_local_data/store/396/3969589f-813d-4ae9-8889-ce061226e12e/202412_1_46_9/: checksums.txt  data.cmrk3  primary.cidx  (+1 more)
.clickhouse_local_data/store/69f/69f1fc24-04ab-4e90-ae4e-ea3c68685299/: asynchronous_metric_log.sql  error_log.sql  metric_log.sql  text_log.sql  trace_log.sql
crates/phoenix-sdk/src/: sdk_client.rs
src/: api.rs  database.rs  main.rs  solana.rs
(+959 files in other folders)
