[package]
name = "solana_phoenix_tx_api"
version = "0.1.0"
edition = "2021"

[dependencies]
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
anyhow = "1.0.52"
solana-account-decoder = ">=1.14.12, <1.19"
solana-sdk = ">=1.14.12, <1.19"
solana-client = ">=1.14.12, <1.19"
solana-cli-config = "2.1.4"
solana-program = ">=1.14.12, <1.19"
ellipsis-client = "1.0.0"
rand = "0.7.3"
bs58 = "0.4.0" 
tokio = { version = "1.23.0", features = ["full"] }
bytemuck = "1.13.1"
clap = { version = "3.0.13", features = ["derive"] }
shellexpand = "2.1.2"
borsh = "0.9.3"
phoenix-common = { version = "0.2.1", features = [ "no-entrypoint" ]} 
phoenix-seat-manager-common = { version = "0.1.1", features = [ "no-entrypoint" ] }
phoenix-sdk = { path = "crates/phoenix-sdk" }
phoenix-sdk-core = { path = "crates/phoenix-sdk-core" }
generic-token-faucet = "0.1.2"
reqwest = "0.11.14"
serde_json = "1.0.94"
bincode = "1.3.3"
clickhouse = "0.13.1"
chrono = "0.4.39"
dotenv = "0.15"
uuid = { version = "1.11.0", features = ["v4"] }
actix-web = "4.9.0"
serde = { version = "1.0.216", features = ["derive"] }
thiserror = "1.0"
mockall = "0.11"
axum = "0.7.9"
axum-server = "0.7.1"